# ether-rs

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  readme.md
api/: Cargo.toml
api/src/: lib.rs
api/src/controller/: auth.rs
api/src/modules/: mod.rs
api/src/modules/auth/: login.rs  logout.rs  mod.rs  register.rs
api/src/modules/menu/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/modules/permission/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/modules/role/: add_permissions.rs  create.rs  delete.rs  get.rs  list.rs  list_permissions.rs  mod.rs  remove_permissions.rs  update.rs
api/src/modules/user/: create.rs  current.rs  current_password.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/router/: app.rs
client/: Cargo.toml
client/src/: database.rs
entity/: Cargo.toml
entity/src/: lib.rs  menu.rs  permission.rs  prelude.rs  role.rs  role_menu.rs  role_permission.rs  user.rs  user_role.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241002_020949_init_user.rs  m20241019_115953_init_menu.rs  m20241020_021506_init_role.rs  m20241020_021519_init_permission.rs  m20241020_024905_init_role_permission.rs  m20241020_024913_init_role_menu.rs  m20241020_025112_init_user_role.rs
src/: main.rs  router.rs
src/common/: error.rs  mod.rs  request.rs  response.rs  validate.rs
src/controller/: mod.rs
src/controller/auth/: login.rs  logout.rs  mod.rs  register.rs
src/controller/user/: current.rs
src/modules/: mod.rs
src/modules/auth/: login.rs  mod.rs  register.rs
src/modules/user/: mod.rs
utils/: Cargo.toml
utils/src/: db.rs  env.rs  hash.rs  jwt.rs  lib.rs  logger.rs  redis.rs  rejection.rs  request.rs  response.rs  xtime.rs
utils/src/middleware/: cors.rs  jwt.rs  log.rs  mod.rs
