[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = "0.6.1"
utils = { path = "../utils" }
validator = { version = "0.18.1", features = ["derive"] }
