[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
entity = { path = "../entity" }

axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
validator = { version = "0.18.1", features = ["derive"] }
sea-orm = "1.0.1"
chrono = "0.4.38"
redis = "0.27.2"
