[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
entity = { path = "../entity" }

axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
validator = { version = "0.19.0", features = ["derive"] }
sea-orm = "1.1.2"
chrono = "0.4.39"
redis = "0.27.6"
