[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
const-hex = "1.13.1"
digest = "0.10.7"
dotenvy = "0.15.7"
hmac = "0.12.1"
md-5 = "0.10.6"
rand = "0.8.5"
sha1 = "0.10.6"
sha2 = "0.10.8"
time = "0.3.36"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }