[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
const-hex = "1.13.1"
digest = "0.10.7"
dotenvy = "0.15.7"
hmac = "0.12.1"
md-5 = "0.10.6"
rand = "0.8.5"
sha1 = "0.10.6"
sha2 = "0.10.8"
time = "0.3.36"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
redis = { version = "0.27.2", features = ["r2d2", "tokio-comp"]}
r2d2 = "0.8.10"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.7"
http = "1.1.0"
nanoid = "0.4.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
validator = "0.18.1"
bcrypt = "0.15.1"
