[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
const-hex = "1.14.0"
digest = "0.10.7"
dotenvy = "0.15.7"
hmac = "0.12.1"
md-5 = "0.10.6"
rand = "0.8.5"
sha1 = "0.10.6"
sha2 = "0.10.8"
time = "0.3.37"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
redis = { version = "0.27.6", features = ["r2d2", "tokio-comp"]}
r2d2 = "0.8.10"
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = "0.7.9"
http = "1.2.0"
nanoid = "0.4.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.7"
validator = "0.19.0"
bcrypt = "0.16.0"
